--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-sitemap": "^7.0"
+        "spatie/laravel-sitemap": "^7.0",
+        "yoomoney/yookassa-sdk-php": "^3.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
